--- a/tech_blog_html/2014-07-01_Windows-Phone-Reset-Experience-Issues.html
+++ b/tech_blog_html/2014-07-01_Windows-Phone-Reset-Experience-Issues.html
@@ -24,20 +24,20 @@
 
 <h4>Backup before Reset</h4>
 <p>Following backup can help minimize the disaster,</p>
-<ul><li>Settings: There are ways to backup settings though in Windows Phone 7 this option might not be available i.e., not availabe on the Windows Phone 7 manufactured by HTC. Here is a place with detail instruction on backing up: <a href="http://www.windowsphone.com/en-us/how-to/wp8/settings-and-personalization/back-up-my-stuff">windowsphone.com/en-us/how-to/wp8/settings-and-personalization/back-up-my-stuff</a></li>
+<ul><li>Settings: There are options to backup settings of Windows Phone. However, in Windows Phone 7 this option might not be available i.e., on the Windows Phone 7 manufactured by HTC. Here is a place with detail instruction on backing up settings of Windows Phone: <a href="http://www.windowsphone.com/en-us/how-to/wp8/settings-and-personalization/back-up-my-stuff">windowsphone.com/en-us/how-to/wp8/settings-and-personalization/back-up-my-stuff</a></li>
 <li>Backup contacts via sync with Google Contacts, Live contacts or using a supported service.</li>
 <li>Sync office docs from Phone using Skydrive/Onedrive.</li>
 <li>Sync Music, Video, Podcasts etc using Zune</li></ul>
 
 <h3>Windows Phone Issues</h3>
 <h4>Issue 2 – when you change SIM you may have an issue with contacts on your Windows Phone</h4>
-<p>You might lose some info of contacts. Especially photos you set manually to contacts and other info might be lost or get messed up.</p>
+<p>Only reproducible with insertion of a different SIM card. You might lose some info of contacts. Especially photos you set manually to contacts and other info might be lost or get messed up.</p>
 
 <h4>Issue 3 – setting a ringtone</h4>
 <p>This should be a trivial task. Have a look at the instruction: <a href="http://www.windowsphone.com/en-us/how-to/wp7/start/create-ringtones">Windows Phone - Add or create ringtone</a></p>
 
 <h4>Issue 4 – Reviewing Microsoft Contacts</h4>
-<p>Microsoft Contacts now named <a href="https://people.live.com/">people</a> was not user friendly last time I checked. Microsoft should check out the competitors to improve this. This service has several drawbacks; mentionable one is that you can not add a photo to contact using the web version and if you set a photo to a contact from Phone it does not sync to the online one. If you somehow lose the phone these photos are lost as they are not synced with the web version. Other drawback is its lack of user friendly interface.</p>
+<p>Microsoft Contacts now named <a href="https://people.live.com/">people</a> has a lot to improve, checking out the competitors services can be a good idea. This service has several drawbacks; mentionable one is that you can not add a photo to contact using the web version and if you set a photo to a contact from Phone it does not sync to the online one. If you somehow lose the phone these photos are lost as they are not synced with the web version. Other drawback is its lack of user friendly interface.</p>
 
 <h4>Issue 5 – Google Contacts is no more Working with the Update of Windows Phone 7.8 and after a reset</h4>
 <p>Consider this scenario. Google Contacts was working fine with your Windows Phone 7. You updated it to 7.8 then it was working also. However, after changing live ID performing reset you will find this is no more working. Problem is described at <a href="http://windows.microsoft.com/en-gb/windows-8/use-google-windows-8-rt">Microsoft - Google Contacts</a> and <a href="http://www.windowsphone.com/en-us/how-to/wp7/people/sync-google-email-contacts-and-calendars-faq">for Windows Phone 7</a>. However, there is workaround. Please use the server m.google.com on Windows Phone 7.8 Thanks google for keeping this alive.</p>
@@ -57,6 +57,7 @@
 <ul><li>Google Chrome</li>
 <li>Bluetooth file transfer support is bad if you are using HTC Windows Phone 7</li>
 <li>Some funny apps such as Talking Cat that are available on iPhone and Android</li>
+<li>If you are using Windows Phone 7 or 7.8 or any version lower than Windows Phone 8 you will miss USSD Menu. Though USSD code is supported, menu reply from USSD is not supported on these phone operating systems yet.</li>
 <li>Support for languages like Bengali if you are using Windows Phone 7</li></ul>
 
 <h4>Improving Battery Life of Windows Phone</h4>
@@ -65,9 +66,9 @@
 <li>Disabling Location Service if it is not necessary</li>
 <li>Disabling WiFi Network if you are not using internet services</li></ul>
 
-<h4>Bangla Support in Windows Phone 7</h4>
+<h4>Bangla (Bengali) Support in Windows Phone 7</h4>
 <p>Bangla is supported in Windows Phone 8. However, earlier releases though have built-in Unicode support does not have support for Bangla. Hence, across the Phone Bangla is not supported. For example, if you use the official facebook application on Windows Phone 7 you will find all characters are being represented indiscriminately using rectangular boxes. However, still Windows Phone 7 has nice Bangla User Interface in following applications,</p>
 <ul><li><a href="http://www.windowsphone.com/en-us/store/app/prothom-alo/66a77885-c91f-45b0-b5fd-8b9a9b713130">prothom-alo</a></li>
-<li><a href="http://www.windowsphone.com/en-us/store/app/bdnews24/e39690c0-2059-4ca7-ab3d-b8a2d4909076">bdnews24</a> by NerdCats: In fact, you see <a href="NerdCats">NerdCats</a> has lots of supported Bangla apps.</li></ul>
+<li><a href="http://www.windowsphone.com/en-us/store/app/bdnews24/e39690c0-2059-4ca7-ab3d-b8a2d4909076">bdnews24</a> by NerdCats: In fact, you see <a href="http://www.windowsphone.com/en-US/store/publishers?publisherId=NerdCats&appId=e39690c0-2059-4ca7-ab3d-b8a2d4909076">NerdCats</a> has lots of supported Bangla apps.</li></ul>
 <br />
-<p>Update (r3): July 04, 2014</p>
+<p>Update (r5): November 09, 2014</p>
