scripting post updated and migrated from blogspot to azure blog  - scripts updated, descriptions updated Windows Phone post updated

--- a/tech_blog_html/2014-07-01_Windows-Phone-Reset-Experience-Issues.html
+++ b/tech_blog_html/2014-07-01_Windows-Phone-Reset-Experience-Issues.html
@@ -1,6 +1,6 @@
 <p><strong>This article discusses following</strong></p>
 <ul><li>What information we lose when we reset Windows Phone</li>
-<li>How to back up Windows Phone Data and Settings</li>
+<li>How to back up Windows Phone data and settings</li>
 <li>Issues with Windows Phone</li>
 <li>When Windows Phone is useful</li>
 <li>How to improve battery life</li>
@@ -8,7 +8,7 @@
 
 <h3>Resetting Windows Phone</h3>
 <h4>Possible Reasons Behind Resetting Windows Phone</h4>
-<p>One of the most common reasons of resetting Windows Phone is the necessity of changing Windows Live ID. Microsoft has created uncomfortable situation regarding use of Live ID on applications that won’t allow you to change to another Live ID easily. Though it is possible to add several live IDs for syncing contacts, mail etc they won’t be used in some important services such as Market Place (required for application update), Windows Phone Skydrive. When you made dramatic changes to your default live id, such as changing default alias you find that you cannot use it or update this info to the Phone. In similar situations, users are forced to change Live ID by resetting Windows Phone.</p>
+<p>One of the most common reasons to reset Windows Phone is to change Windows Live ID. WP does not allow you to change to another Live ID easily. Though it is possible to add several live IDs for syncing contacts, mail etc they won’t be used in some important services such as Market Place (required for application update), Windows Phone Skydrive. When you make changes to your default live id account such as changing default alias you find that you cannot use the account anymore on the phone as it requires updateing the information regarding Live ID on the phone. Users are forced to change Live ID by resetting Windows Phone. In other cases when phone is behaving weird or you messed up some settings of the phone you might want to reset the phone as well.</p>
 
 <p>Before resetting Windows Phone it is useful to know what information you will lose after performing reset,</p>
 <h4>Information Lost after Resetting Windows Phone</h4>
@@ -69,6 +69,6 @@
 <h4>Bangla (Bengali) Support in Windows Phone 7</h4>
 <p>Bangla is supported in Windows Phone 8. However, earlier releases though have built-in Unicode support does not have support for Bangla. Hence, across the Phone Bangla is not supported. For example, if you use the official facebook application on Windows Phone 7 you will find all characters are being represented indiscriminately using rectangular boxes. However, still Windows Phone 7 has nice Bangla User Interface in following applications,</p>
 <ul><li><a href="http://www.windowsphone.com/en-us/store/app/prothom-alo/66a77885-c91f-45b0-b5fd-8b9a9b713130">prothom-alo</a></li>
-<li><a href="http://www.windowsphone.com/en-us/store/app/bdnews24/e39690c0-2059-4ca7-ab3d-b8a2d4909076">bdnews24</a> by NerdCats: In fact, you see <a href="http://www.windowsphone.com/en-US/store/publishers?publisherId=NerdCats&appId=e39690c0-2059-4ca7-ab3d-b8a2d4909076">NerdCats</a> has lots of supported Bangla apps.</li></ul>
+<li><a href="http://www.windowsphone.com/en-us/store/app/bdnews24/e39690c0-2059-4ca7-ab3d-b8a2d4909076">bdnews24</a> by NerdCats: In fact, <a href="http://www.windowsphone.com/en-US/store/publishers?publisherId=NerdCats&appId=e39690c0-2059-4ca7-ab3d-b8a2d4909076">NerdCats</a> have developed a number of Bangla apps for WP. Please have a look at <a href="http://www.windowsphone.com/en-US/store/publishers?publisherId=NerdCats&appId=e39690c0-2059-4ca7-ab3d-b8a2d4909076">their page</a> to check out those apps.</li></ul>
 <br />
-<p>Update (r5): November 09, 2014</p>
+<p>Update (r6): January 10, 2014</p>
