--- a/tech_blog_html/2014-06-18_tl-wr841n-going-back-to-tp-link-firmware.html
+++ b/tech_blog_html/2014-06-18_tl-wr841n-going-back-to-tp-link-firmware.html
@@ -1,12 +1,12 @@
-<p>You have installed openwrt on your <a href="http://www.tp-link.com/lk/products/details/?model=TL-WR841N
-">TL- WR841N Router (a 300Mbps Wireless N Router)</a>. Some time later you decide on to go back to original firmware which was provided by TP-Link. Firmware download page for version 9 of 841N is here: <a href="http://www.tp-link.com/en/support/download/?model=TL-WR841ND&version=V9
+<p>Consider this scenaio: you have installed openwrt on your <a href="http://www.tp-link.com/lk/products/details/?model=TL-WR841N
+">TL- WR841N Router (a 300Mbps Wireless N Router)</a>. Some time later you decide to go back to original firmware which was provided by TP-Link. There can be several cogent reasons for doing so. Firmware download page for version 9 of 841N is here: <a href="http://www.tp-link.com/en/support/download/?model=TL-WR841ND&version=V9
 ">tp-link.com/en/support/download/?model=TL-WR841ND&version=V9
 </a> We are using version 9 for our experiment.</p>	
 
 <h3>The Problem</h3>
 <p>The procedure to follow for going back to original firmware is as simple as this:</p>
 <ul><li>Fire up an ssh prompt ( you can use putty or other ssh-client) ip address of the router is 192.1.68.1.1 when you connect the router with your PC with a lan cable attaced to LAN port of the router.</li>
-<li>After downloading the firmware, for example, we rename the file [wr841nv9_en_3_14_4_up_boot(131129).bin ] to tlwr841n-firm-orig.bin I uploaded it to our domain so that we could retrieve it using wget in the router. For convenience of users <a href="http://saoslab.com/Downloads/tlwr841n-firm-orig.bin">firmware URL</a> is still accessible.</li>
+<li>After downloading the firmware, for example, we rename the file [wr841nv9_en_3_14_4_up_boot(131129).bin ] to tlwr841n-firm-orig.bin I uploaded it to our domain so that we could retrieve it using wget in the router. For convenience of users <a href="http://saos.azurewebsites.net/Downloads/tlwr841n-firm-orig.bin">firmware URL</a> is still accessible.</li>
 <li>Then you run following commands on the shell (this is how the openwrt shell looks like):</li></ul>
 <pre class="brush: bash; first-line: 1; tab-size: 5; toolbar: false;">
 
@@ -24,7 +24,7 @@ _____                     ________        __
   * 2 tsp. Creme de Cacao
  -----------------------------------------------------
 root@OpenWrt:~# cd /tmp
-root@OpenWrt:~# wget http://saoslab.com/Downloads/tlwr841n-firm-orig.bin
+root@OpenWrt:~# wget http://saos.azurewebsites.net/Downloads/tlwr841n-firm-orig.bin
 Connecting to saoslab.com (115.112.214.132:80)
 tlwr841n-firm-orig.bin          100% |**********************|  3968k  0:00:00 ETA
 
@@ -65,3 +65,5 @@ Rebooting system...</pre>
 
 <h3>Fixing Back Openwrt After mtd Failure</h3>
 <p style="text-align:left">After you got an error message applying mtd command as mentioned before and you decide that you will stick with openwrt instead of going back to stock firmware you can do that. However, you must upload an openwrt firmware using sysupgrade command. But, you will face a new problem after performing sysupgrade. Your router will forget root password. So, you cannot login using ssh or access using luci Web Interface. But, there is nothing to panic. You still can login using telnet to 192.168.1.1 and apply new password using passwd command. That'll fix the problem. Now, you can login using ssh to make further changes as per your requirement.</p>
+<br>
+<p>Commit (r9): January 28, 2015</p>
