--- a/trunk/tech_blog_html/2014-09-06_compile-linux-kernel-from-source.html
+++ b/trunk/tech_blog_html/2014-09-06_compile-linux-kernel-from-source.html
@@ -629,4 +629,4 @@ and probably it adds some more: soft links are created:</p>
 <li><a href="http://bodhizazen.net/Tutorials/kernel">bodhizazen - Compile Kernel</a></li></ul>
 
 <br>
-<p>Commit (r9): January 27, 2015/p>
+<p>Commit (r9): January 27, 2015</p>
